--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
   "name": "font-handsome",
-  "description": "Font Handsome",
-  "version": "0.0.1",
+  "description": "Take back full control of icons within stylesheets.",
+  "version": "0.1.0",
   "keywords": [ "OOSass","font", "icon" ],
   "homepage": "https://github.com/ethantw/font-handsome",
   "dependencies": {},
   "devDependencies": {},
   "license": "MIT License", 
-  "main": "index.sass",
+  "main": "_index.sass",
   "ignore": [
     "*/.*",
     "*.md"
