--- a/package.json
+++ b/package.json
@@ -7,11 +7,21 @@
     "type": "git",
     "url": "http://github.com/ethantw/font-handsome"
   },
-  "keywords": [ "OOSass", "font", "icon" ],
+  "keywords": [
+    "OOSass",
+    "font",
+    "icon"
+  ],
   "author": "Chen Yijun (@ethantw)",
   "license": "MIT License",
+  "scripts": {
+    "test": "./node_modules/node-sass/bin/node-sass demo.sass"
+  },
   "bugs": {
     "url": "https://github.com/ethantw/font-handsome/issues"
   },
-  "homepage": "https://github.com/ethantw/font-handsome"
+  "homepage": "https://github.com/ethantw/font-handsome",
+  "devDependencies": {
+    "node-sass": "^1.2.3"
+  }
 }
